6/25/12 Reduced ToggleButtonNode stroke to make buttons look crisper.  Usages only appear in Fractions intro application
5/14/12 #3330, fix HSlider/VSlider so that drag handler considers whether the slider is enabled
5/11/12 #3327, prevent WavelengthControl bounds from changing when thumb is dragged to min/max
5/9/12 added HorizontalTiledNode, for creating a node by tiling a set of images, useful for images that need to adjust width for i18n
5/4/12 Fixed: Speed sensor resizes when readout changes
4/25/12 Fixed: SensorNode jumps around, see #3318
4/17/12 Performance improvements for PhetPText and PhetPPath, see #3309
4/13/12 Scale down text on SpeedometerNode if it is too big
4/5/12 PadBoundsNode, workaround for toImage clipping, see #558
4/5/12 hide the speedometer needle when NaN
3/29/12 add ToggleButtonNode and MomentaryButtonNode
3/20/12 made rootNode protected, see #3255
3/20/12 Extend ticks to the track, see #3255
3/19/12 Added invisible padding around VSliderNode, see #3255, resolves comments 15 and 17
3/19/12 Rewrote HSliderNode to use VSliderNode as a composite, see #3255
3/12/12 #3276, fixed coordinate frame problem in WavelengthControl
3/12/12 #3277 add sim-sharing to WavelengthControl (first pass)
2/29/12 #2920 changes to PhotonImageFactory (now PhotonImageChange and PhotonNode)
2/14/12 #3255, initial attempt to make the interfaces for HSlider and VSlider more similar
2/3/12 #3245, Fixed knob and tick locations
2/2/12 #3223, collapse SimSharingComboBoxNode into ComboBoxNode, since all instances were of type SimSharingComboBoxNode
2/2/12 i18n of WavelengthControl
1/23/12 #3226, add data collection to SliderNode hierarchy
1/18/12 Simsharing: add UserComponentType to UserMessages, delete IComponentType
1/16/12 restored sim-sharing to ComboBoxNode via subclassing, see SimSharingComboBoxNode
1/16/12 fixed sim-sharing for Reset All (ResetAllButtonNode)
1/11/12 Simsharing: support customization of drag handlers via both subclassing and mutation